--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,33 +1,98 @@
+import java.text.SimpleDateFormat
+
 apply plugin: 'com.android.application'
 
 apply plugin: 'kotlin-android'
 
 apply plugin: 'kotlin-android-extensions'
 
+def makeVersionString() {
+    SimpleDateFormat dateFormat = new SimpleDateFormat("yyMMddHH")
+    return dateFormat.format(new Date()).toInteger()
+}
+
 android {
     compileSdkVersion 26
     defaultConfig {
         applicationId "com.app.lee"
-        minSdkVersion 15
+        minSdkVersion 17
         targetSdkVersion 26
-        versionCode 1
-        versionName "1.0"
+        versionCode makeVersionString()
+        versionName "1.0.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+
+        javaCompileOptions {
+            annotationProcessorOptions {
+                arguments = [ moduleName : project.getName() ]
+            }
+        }
     }
+
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            ndk {
+                abiFilters "armeabi", "armeabi-v7a"
+            }
         }
+        debug {
+            minifyEnabled false
+            ndk {
+                abiFilters "armeabi", "armeabi-v7a"
+            }
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+        }
+    }
+    lintOptions {
+        abortOnError false
+        checkReleaseBuilds false
+    }
+    sourceSets {
+        main {
+            jniLibs.srcDirs = ['libs']
+        }
+    }
+    dataBinding {
+        enabled = true
+    }
+    compileOptions {
+        sourceCompatibility 1.8
+        targetCompatibility 1.8
     }
 }
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation"org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
     implementation 'com.android.support:appcompat-v7:26.1.0'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
+
+    implementation 'io.reactivex.rxjava2:rxandroid:2.0.1'
+
+    implementation "io.reactivex.rxjava2:rxjava:$rxjava2Version"
+
+
+    implementation "com.squareup.retrofit2:retrofit:$retrofit2Version"
+    implementation "com.squareup.retrofit2:adapter-rxjava2:$retrofit2Version"
+    implementation "com.squareup.retrofit2:converter-gson:$retrofit2Version"
+    implementation "com.google.code.gson:gson: $gsonVersion"
+    implementation 'com.squareup.okhttp3:logging-interceptor:3.6.0'
+    implementation 'com.github.bumptech.glide:glide:3.7.0'
+    implementation 'org.aspectj:aspectjrt:1.8.9'
+
+    // 替换成最新版本, 需要注意的是api
+    // 要与compiler匹配使用，均使用最新版可以保证兼容
+    implementation 'com.alibaba:arouter-api:1.3.1'
+    annotationProcessor 'com.alibaba:arouter-compiler:1.1.4'
+
+    implementation 'org.greenrobot:eventbus:3.0.0'
+    implementation 'com.haibin:calendarview:3.1.5'
+
+    implementation 'com.tencent.sonic:sdk:3.0.0-alpha'
+    implementation 'com.github.wendux:DSBridge-Android:2.0-SNAPSHOT'
+
 }
