--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,9 @@ buildscript {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath 'com.neenbedankt.gradle.plugins:android-apt:1.8' //路由需要
 
+        classpath 'org.aspectj:aspectjtools:1.8.9'
+        classpath 'org.aspectj:aspectjweaver:1.8.9'
+
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
